@startuml

title __CREATEGAME's Class Diagram__\n

  namespace  {
    namespace om.example.semesterexam {
      namespace creategame {
        class com.example.semesterexam.creategame.ChooseController {
            ~ anchorPane : AnchorPane
            ~ chooseFigure : AnchorPane
            ~ chooseMap : AnchorPane
            ~ curFir : ImageView
            ~ curMap : ImageView
            ~ figureChoose : ImageView
            ~ firType : Text
            ~ logoGame : ImageView
            ~ mapChoose : ImageView
            ~ moveFir : ImageView
            ~ nameFir1 : TextField
            ~ nameFir2 : TextField
            ~ nameMap : ImageView
            ~ nextFir : ImageView
            ~ nextMap : ImageView
            ~ playerN : ImageView
            ~ prevFir : ImageView
            ~ prevMap : ImageView
            ~ soundGame : MediaPlayer
            ~ soundOnEnterStartIcon : MediaPlayer
            ~ start : ImageView
            - BUTTON_MOVE_WIDTH : double
            - BUTTON_WIDTH : double
            - LOGO_WIDTH : double
            - onChoose : IntegerProperty
            - onSetupFigure : IntegerProperty
            - rateGain : DoubleProperty
            + initialize()
            + moveSetupNextFir()
            + nextFir()
            + nextMap()
            + onEnterChooseFigureIcon()
            + onEnterChooseMapIcon()
            + onEnterNextFirIcon()
            + onEnterNextMapIcon()
            + onEnterPrevFirIcon()
            + onEnterPrevMapIcon()
            + onEnterStartIcon()
            + onExitChooseFigureIcon()
            + onExitChooseMapIcon()
            + onExitNextFirIcon()
            + onExitNextMapIcon()
            + onExitPrevFirIcon()
            + onExitPrevMapIcon()
            + onExitStartIcon()
            + pressFigureChoose()
            + pressMapChoose()
            + prevMap()
            + start()
            - setBackgroundAnchorPane()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.semesterexam {
      namespace creategame {
        class com.example.semesterexam.creategame.FigureDisplay {
            {static} + MAGICIAN : int
            {static} + SUPERHUMAN : int
            - curFir : int
            - figures : List<Image>
            - typeFir : String
            + FigureDisplay()
            + curFir()
            + getCurFir()
            + getTypeFir()
            + loadFigures()
            + nextFir()
            + prevFir()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.semesterexam {
      namespace creategame {
        class com.example.semesterexam.creategame.ImagesStart {
            {static} + CHOOSE_FIGURE_ON_ENTER : Image
            {static} + CHOOSE_FIGURE_ON_EXIT : Image
            {static} + CHOOSE_MAP_ON_ENTER : Image
            {static} + CHOOSE_MAP_ON_EXIT : Image
            {static} + LOGO_BOMBERMAN : Image
            {static} + NEXT_ON_ENTER : Image
            {static} + NEXT_ON_EXIT : Image
            {static} + PLAYER1 : Image
            {static} + PLAYER2 : Image
            {static} + PREV_ON_ENTER : Image
            {static} + PREV_ON_EXIT : Image
            {static} + START_ICON_ON_ENTER : Image
            {static} + START_ICON_ON_EXIT : Image
            {static} + TOP_ARROW : Image
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.semesterexam {
      namespace creategame {
        class com.example.semesterexam.creategame.MapDisplay {
            {static} + typeGrass : int
            - curMap : int
            - folderMaps : String
            - maps : List<Image>
            + curMap()
            + getCurFolderMap()
            + loadMaps()
            + nextMap()
            + prevMap()
            - definedMap()
            - getCurMap()
        }
      }
    }
  }
  

  com.example.semesterexam.creategame.ChooseController .up.|> javafx.fxml.Initializable
  com.example.semesterexam.creategame.ChooseController o-- com.example.semesterexam.creategame.FigureDisplay : figureDisplay1
  com.example.semesterexam.creategame.ChooseController o-- com.example.semesterexam.creategame.FigureDisplay : figureDisplay2
  com.example.semesterexam.creategame.ChooseController o-- com.example.semesterexam.creategame.MapDisplay : mapDisplay


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
